// SPDX-FileCopyrightText: Copyright (c) 2026 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
// SPDX-License-Identifier: Apache-2.0
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
// http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package workflows.v1;

import "google/protobuf/timestamp.proto";

import "workflow.proto";
import "common_carbide.proto";
import "forge_carbide.proto";

option go_package = "github.com/nvidia/bare-metal-manager-rest/workflow-schema/proto";

// CreateInfiniBandPartitionRequest - request parameters for InfiniBandPartition creation
message CreateInfiniBandPartitionRequest {
  // Name of the partition
  string name = 1;
  // ID of the Tenant org creating this Partition
  string tenant_organization_id = 2;
  // Workflow configurations
  optional WorkflowOptions options = 3;
  // ID of the partition
  common.UUID ib_partition_id = 4;
}

// DeleteInfiniBandPartitionRequest - request parameters to delete InfiniBandPartition
message DeleteInfiniBandPartitionRequest {
  // ID of the InfiniBandPartition to be deleted
  common.UUID id = 1;
  // Workflow configurations
  optional WorkflowOptions options = 2;
}

// GetInfiniBandPartition - request to get a specific InfiniBandPartition
message GetInfiniBandPartitionRequest {
  // ID of the InfiniBandPartition to be deleted
  common.UUID id = 1;
  // Workflow configurations
  optional WorkflowOptions options = 2;
}

// InfiniBandPartitionInfo - response for InfiniBandPartition create/update/delete request
message InfiniBandPartitionInfo {
  // Status of workflow execution
  WorkflowStatus status = 1;
  // Status if the object, if available
  ObjectStatus object_status = 2;
  // Status message
  string status_msg = 3;
  // Details of the InfiniBandPartition
  forge.IBPartition ib_partition = 4;
}

// InfiniBandPartitionInventory - inventory info of all InfiniBandPartitions on Site collected
// periodically
message InfiniBandPartitionInventory {
  // Status of Inventory
  InventoryStatus inventory_status = 1;
  // Status message
  string status_msg = 2;
  // Reported timestamp of InfiniBand Partition inventory
  google.protobuf.Timestamp timestamp = 3;
  // List of InfiniBand Partition
  repeated forge.IBPartition ib_partitions = 4;
  // Inventory page information
  InventoryPage inventory_page = 5;
}
